--- a/donate.html
+++ b/donate.html
@@ -147,77 +147,131 @@
 
         // Inizializza Ergo SDK e wallet
         async function loadErgo() {
-            await ergoConnector.nautilus.connect();
-            const address = await ergoConnector.nautilus.getContext().get_change_address();
-            console.log("Indirizzo del wallet:", address);
-            return address;
+            try {
+                await ergoConnector.nautilus.connect(); // Connect to the user's wallet
+                const address = await ergoConnector.nautilus.getContext().get_change_address(); // Get the change address from wallet context
+                console.log("Indirizzo del wallet:", address);
+                return address;
+            } catch (error) {
+                console.error("Errore durante la connessione al wallet:", error); // Log an error if wallet connection fails
+            }
         }
 
         // Aggiorna lo stato della campagna
         async function updateCampaignStatus() {
-            const explorerUrl = "https://api.ergoplatform.com/api/v1";
-            const heightResponse = await fetch(`${explorerUrl}/blocks`);
-            const heightData = await heightResponse.json();
-            currentHeight = heightData.total - 1; // Blocco corrente
-            document.getElementById('currentHeight').textContent = currentHeight;
+            try {
+                const explorerUrl = "https://api.ergoplatform.com/api/v1"; // URL for Ergo blockchain explorer
+                const heightResponse = await fetch(`${explorerUrl}/blocks`); // Fetch current blockchain height
+                const heightData = await heightResponse.json();
+                currentHeight = heightData.total - 1; // Get the current block height
+                document.getElementById('currentHeight').textContent = currentHeight; // Update the UI with the current block height
 
-            document.getElementById('raisedAmount').textContent = (raisedAmount / 1e9).toFixed(2);
-            document.getElementById('minGoal').textContent = (minToRaise / 1e9).toFixed(2);
+                document.getElementById('raisedAmount').textContent = (raisedAmount / 1e9).toFixed(2); // Display total funds raised in ERG
+                document.getElementById('minGoal').textContent = (minToRaise / 1e9).toFixed(2); // Display minimum goal in ERG
 
-            const campaignStatus = document.getElementById('campaignStatus');
-            if (raisedAmount >= minToRaise) {
-                campaignStatus.textContent = 'Successo (obiettivo raggiunto)';
-            } else {
-                campaignStatus.textContent = 'In corso (contribuisci ora!)';
+                const campaignStatus = document.getElementById('campaignStatus');
+                if (raisedAmount >= minToRaise) {
+                    campaignStatus.textContent = 'Successo (obiettivo raggiunto)'; // Update status if goal is reached
+                } else {
+                    campaignStatus.textContent = 'In corso (contribuisci ora!)'; // Campaign is still active
+                }
+            } catch (error) {
+                console.error("Errore durante l'aggiornamento dello stato della campagna:", error); // Log an error if fetching the block height fails
             }
         }
 
         // Invia una transazione di contributo
         async function sendContribution() {
             const amountInput = document.getElementById('amount');
-            const amount = parseFloat(amountInput.value) * 1e9; // Converti ERG in nanoERG
+            const amount = parseFloat(amountInput.value) * 1e9; // Convert ERG to nanoERG
             const chosenAddress = prompt('Inserisci l\'indirizzo per la donazione del 10%');
 
-            if (isNaN(amount) || amount <= 0 || !chosenAddress) {
+            if (isNaN(amount) || amount <= 0 || !chosenAddress) { // Validate input
                 alert('Inserisci un importo valido e un indirizzo per la donazione.');
                 return;
             }
 
-            const ctx = await ergoConnector.nautilus.getContext();
-            const changeAddr = await ctx.get_change_address();
-            const utxos = await ctx.get_utxos(amount);
+            try {
+                const ctx = await ergoConnector.nautilus.getContext(); // Get wallet context
+                const changeAddr = await ctx.get_change_address(); // Get the change address
+                const utxos = await ctx.get_utxos(amount); // Get UTXOs to cover the transaction amount
 
-            const tx = await ctx.sign_tx({
-                inputs: utxos,
-                outputs: [
-                    {
-                        value: amount,
-                        address: "indirizzo_smart_contract",
-                        additionalRegisters: { R8: chosenAddress }
-                    }
-                ],
-                fee: 1000000,
-                changeAddress: changeAddr
-            });
+                // Construct and sign the transaction
+                const tx = await ctx.sign_tx({
+                    inputs: utxos,
+                    outputs: [
+                        {
+                            value: amount, // Contribution amount in nanoERG
+                            address: "indirizzo_smart_contract", // Smart contract address
+                            additionalRegisters: { R8: chosenAddress } // Store chosen address in register R8
+                        }
+                    ],
+                    fee: 1000000, // Transaction fee in nanoERG
+                    changeAddress: changeAddr // Change address
+                });
 
-            const txId = await ctx.submit_tx(tx);
-            console.log("ID transazione inviata:", txId);
+                // Submit the transaction
+                const txId = await ctx.submit_tx(tx);
+                console.log("ID transazione inviata:", txId); // Log transaction ID
 
-            raisedAmount += amount;
-            updateCampaignStatus();
-            amountInput.value = ''; 
-            alert(`Hai contribuito con ${(amount / 1e9).toFixed(2)} ERG!`);
+                raisedAmount += amount; // Update the total amount raised
+                updateCampaignStatus(); // Update the campaign status in the UI
+                amountInput.value = ''; // Clear the input field
+                alert(`Hai contribuito con ${(amount / 1e9).toFixed(2)} ERG!`); // Notify user of successful contribution
+            } catch (error) {
+                console.error("Errore durante l'invio del contributo:", error); // Log an error if transaction fails
+                alert('Errore durante l'invio del contributo. Riprova.');
+            }
         }
 
         // Finalizza la campagna
         async function finalizeCampaign() {
-            if (raisedAmount < minToRaise) {
-                alert('L\'obiettivo non è stato ancora raggiunto.');
+            if (raisedAmount < minToRaise) { // Check if campaign goal is met
+                alert('L'obiettivo non è stato ancora raggiunto.');
                 return;
             }
 
-            const contributors = ["indirizzo1", "indirizzo2", "indirizzo3"];
-            const randomContributor = contributors[Math.floor(Math.random() * contributors.length)];
+            try {
+                // Mock contributor addresses - these should be dynamically obtained in a real scenario
+                const contributors = ["indirizzo1", "indirizzo2", "indirizzo3"];
+                const randomContributor = contributors[Math.floor(Math.random() * contributors.length)]; // Select a random contributor
 
-            const totalRaised = raisedAmount;
-           
+                const totalRaised = raisedAmount;
+                const randomContributorPayout = totalRaised * 0.75; // 75% to a random contributor
+                const e41Payout = totalRaised * 0.15; // 15% to ERGO41
+                const chosenPayout = totalRaised * 0.10; // 10% to the chosen address
+
+                const ctx = await ergoConnector.nautilus.getContext(); // Get wallet context
+                const changeAddr = await ctx.get_change_address(); // Get the change address
+                const utxos = await ctx.get_utxos(1000000); // Get UTXOs to cover transaction fee
+
+                // Construct and sign the transaction for final distribution
+                const tx = await ctx.sign_tx({
+                    inputs: utxos,
+                    outputs: [
+                        { value: randomContributorPayout, address: randomContributor }, // Payout to random contributor
+                        { value: e41Payout, address: "indirizzo_e41" }, // Payout to ERGO41
+                        { value: chosenPayout, address: "indirizzo_utente" } // Payout to chosen address
+                    ],
+                    fee: 1000000, // Transaction fee in nanoERG
+                    changeAddress: changeAddr // Change address
+                });
+
+                // Submit the transaction
+                const txId = await ctx.submit_tx(tx);
+                console.log("ID transazione finale inviata:", txId); // Log transaction ID
+                alert('La campagna è stata finalizzata!'); // Notify user of successful finalization
+            } catch (error) {
+                console.error("Errore durante la finalizzazione della campagna:", error); // Log an error if finalization fails
+                alert('Errore durante la finalizzazione della campagna. Riprova.');
+            }
+        }
+
+        // Load wallet and update campaign status when the page loads
+        document.addEventListener('DOMContentLoaded', async function () {
+            await loadErgo(); // Initialize the wallet connection
+            updateCampaignStatus(); // Update the campaign status in the UI
+        });
+    </script>
+</body>
+</html>
