--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <h2>Cosa è ERGO4ONE</h2>
             <p>ERGO4ONE è una DAO che permette alle comunità di utilizzare equamente le risorse e ridistribuire i crediti automaticamente. Utilizzando la tecnologia blockchain, favoriamo trasparenza, sicurezza ed equità.</p>
             <h2>Cosa è MillionErg</h2>
-            <p>MillionErg è un'iniziativa per raccogliere fondi decentralizzati che vengono ridistribuiti per premiare i contributori in modo equo e trasparente, creando nuovi milionari e sostenendo progetti sociali.</p>
+            <p>MillionErg è un'iniziativa per raccogliere fondi decentralizzatamente per poi ridistribuirli e premiare i contributori in modo equo e trasparente, creando nuovi milionari e sostenendo progetti sociali.</p>
         </div>
     </section>
 
