--- a/donate.html
+++ b/donate.html
@@ -36,8 +36,14 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             margin-top: 20px;
         }
+        .logo-container {
+            position: relative;
+        }
         .logo-container img {
             width: 100px;
+            border: 3px solid orange; /* Fine border color */
+            border-radius: 50%; /* Make the image circular */
+            padding: 5px;
         }
         h1 {
             display: inline-block;
