--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ERGO4ONE - Costruire un Mondo Decentralizzato | MillionErg</title>
-    <meta name="description" content="ERGO4ONE è una DAO che promuove un mondo decentralizzato attraverso l'uso della tecnologia blockchain. Unisciti a noi per un'economia equa e trasparente.">
-    <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="ERGO4ONE è una DAO che promuove un mondo decentralizzato attraverso l'uso della tecnologia blockchain. Unisciti a noi per un'economia equa, trasparente, incensurabile e instoppabile.">
+    <link rel="stylesheet" href="styles.css"> <!-- Collega il CSS principale -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <!-- Structured Data for SEO -->
@@ -32,25 +32,31 @@
             padding: 0;
             display: flex;
             flex-direction: column;
-            min-height: 100vh;
+            min-height: 100vh; /* Rende il footer sempre in fondo alla pagina */
+            transition: background-color 0.5s ease; /* Transizione per il cambiamento del colore di sfondo */
         }
         header {
             background-color: #333;
             color: white;
             padding: 10px 0;
-            position: relative;
+            position: relative; /* Posizionamento relativo per la gestione del menu */
         }
         .container {
             max-width: 1200px;
             margin: auto;
             padding: 0 15px;
-            flex: 1;
+            flex: 1; /* Permette al contenuto di espandersi */
         }
         .logo-container img {
             width: 100px;
+            border-radius: 50%; /* Cornice circolare */
+            border: 2px solid orange; /* Bordo arancione sottile */
         }
-        h1, h2 {
-            color: #333;
+        h1 {
+            display: inline-block;
+            margin-left: 15px;
+            vertical-align: middle;
+            color: #ffffff;
         }
         nav ul {
             list-style-type: none;
@@ -80,15 +86,16 @@
         }
         .benefits-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 20px;
+            margin-top: 20px;
         }
         .benefit-item {
             background-color: #fff;
             border: 1px solid #ddd;
             border-radius: 5px;
             padding: 20px;
-            box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
         }
         .btn {
             background-color: #0056b3;
@@ -99,7 +106,7 @@
             text-decoration: none;
         }
         .btn:hover {
-            background-color: #004080;
+            background-color: #004a99;
         }
         footer {
             margin-top: 50px;
@@ -115,8 +122,7 @@
         .expandable-container.expanded {
             display: block;
         }
-
-        /* Stili per il menu a discesa */
+        /* Stili per il menu hamburger */
         .hamburger {
             display: none;
             flex-direction: column;
@@ -132,7 +138,6 @@
             background-color: white;
             transition: 0.3s;
         }
-
         /* Stili per il menu mobile */
         .menu-overlay {
             display: none;
@@ -150,7 +155,6 @@
         .menu-overlay ul {
             display: flex;
             flex-direction: column;
-            text-align: center;
         }
         .menu-overlay ul li {
             margin: 20px 0;
@@ -158,16 +162,24 @@
         .menu-overlay.show {
             display: flex;
         }
-
         @media (max-width: 768px) {
             nav ul {
                 display: none;
             }
+            nav ul li {
+                margin: 0;
+            }
+            nav ul li a {
+                padding: 10px;
+                text-align: center;
+                display: block;
+            }
             .hamburger {
                 display: flex;
+                margin-right: 15px;
             }
             .benefits-grid {
-                grid-template-columns: 1fr;
+                grid-template-columns: 1fr; /* Una colonna singola su dispositivi più piccoli */
             }
         }
     </style>
@@ -214,7 +226,7 @@
     <section id="hero">
         <div class="container">
             <h1>Costruire un Mondo Decentralizzato con MillionErg</h1>
-            <p>Una piattaforma che promuove equità, trasparenza e solidarietà sociale grazie alla tecnologia blockchain.</p>
+            <p>Una piattaforma che promuove equità, trasparenza e solidarietà sociale grazie alla tecnologia blockchain. Unisciti a noi per creare un futuro dove la partecipazione è libera, incensurabile e alla portata di tutti.</p>
             <a href="https://t.me/millionerg24" class="btn" target="_blank" rel="noopener noreferrer">Unisciti al Movimento</a>
         </div>
     </section>
@@ -223,9 +235,9 @@
     <section id="about">
         <div class="container">
             <h2>Cosa è ERGO4ONE</h2>
-            <p>ERGO4ONE è una DAO che permette alle comunità di utilizzare equamente le risorse e ridistribuire i crediti automaticamente. Utilizzando la tecnologia blockchain, favoriamo trasparenza, sicurezza ed equità.</p>
+            <p>ERGO4ONE è una DAO che permette alle comunità di utilizzare equamente le risorse e di ridistribuire i crediti automaticamente. Grazie alla tecnologia blockchain, ERGO4ONE favorisce trasparenza, sicurezza, privacy e incensurabilità, garantendo che tutte le attività siano libere da interferenze o censure esterne.</p>
             <h2>Cosa è MillionErg</h2>
-            <p>MillionErg è un'iniziativa per raccogliere fondi decentralizzatamente per poi ridistribuirli e premiare i contributori in modo equo e trasparente, creando nuovi milionari e sostenendo progetti sociali.</p>
+            <p>MillionErg è un'iniziativa di crowdfunding basata su Ergo, che mira a costruire un'economia più equa, instoppabile e decentralizzata. Ogni contributo viene registrato in maniera trasparente, permettendo un accesso equo a tutti e senza possibilità di bloccare o censurare le attività di chi partecipa.</p>
         </div>
     </section>
 
@@ -236,19 +248,23 @@
             <div class="benefits-grid">
                 <div class="benefit-item">
                     <h3>Governance Decentralizzata</h3>
-                    <p>Decisioni eque, trasparenti e guidate dalla comunità, garantendo che ogni membro abbia una voce e possa contribuire attivamente.</p>
+                    <p>Tutte le decisioni vengono prese dai membri della comunità, in maniera equa e trasparente, garantendo che ogni voce abbia un peso reale. La decentralizzazione assicura che nessuna singola entità possa prendere il controllo o censurare la piattaforma.</p>
                 </div>
                 <div class="benefit-item">
                     <h3>Privacy e Sicurezza</h3>
-                    <p>La blockchain protegge le transazioni e garantisce privacy grazie alla crittografia avanzata, mantenendo i dati degli utenti al sicuro.</p>
+                    <p>La privacy degli utenti è una priorità assoluta. Utilizziamo crittografia avanzata e registrazioni sulla blockchain per garantire che tutte le transazioni siano sicure, anonime e immutabili. Nessun dato sensibile può essere compromesso o manipolato.</p>
                 </div>
                 <div class="benefit-item">
                     <h3>Pari Opportunità</h3>
-                    <p>Creiamo una distribuzione bilanciata delle risorse, assicurando pari opportunità di accesso per tutti i partecipanti.</p>
+                    <p>Crediamo in un mondo in cui le risorse devono essere accessibili a tutti, indipendentemente da dove vivono o chi siano. La nostra piattaforma consente una distribuzione bilanciata e equa delle risorse, riducendo le barriere e promuovendo un accesso equo per tutti.</p>
                 </div>
                 <div class="benefit-item">
                     <h3>Costi di Transazione Ridotti</h3>
-                    <p>La nostra tecnologia garantisce commissioni basse per le transazioni, consentendo a tutti di partecipare senza costi elevati.</p>
+                    <p>Grazie alla tecnologia blockchain, riusciamo a mantenere i costi di transazione al minimo. Questo garantisce che la maggior parte dei fondi raccolti vada direttamente agli scopi prefissati, piuttosto che alle spese di intermediari o commissioni elevate.</p>
+                </div>
+                <div class="benefit-item">
+                    <h3>Incensurabilità e Instoppabilità</h3>
+                    <p>La piattaforma è progettata per essere incensurabile e instoppabile. Nessuna autorità centrale può intervenire per bloccare transazioni o limitare l'accesso, garantendo così una totale libertà di partecipazione e resistenza alla censura.</p>
                 </div>
             </div>
         </div>
@@ -258,7 +274,7 @@
     <section id="donate">
         <div class="container">
             <h2>Sostieni la Nostra Missione</h2>
-            <p>Aiuta a costruire un'economia decentralizzata ed equa donando token Ergo (ERG). Ogni contributo dà potere agli individui e alle piccole imprese.</p>
+            <p>Aiuta a costruire un'economia decentralizzata ed equa donando token Ergo (ERG). Ogni contributo potenzia individui, piccole imprese e iniziative sociali, assicurando che ogni membro della comunità abbia un'opportunità reale di prosperare in un ambiente libero e aperto.</p>
             <a href="donate.html" class="btn">Dona ERG Ora</a>
         </div>
     </section>
@@ -317,3 +333,4 @@
     </script>
 </body>
 </html>
+
